@@ -30,12 +30,12 @@ class markasjunk2_email_learn
 {
     private $rcube;
 
-    public function spam($uids, $mbox)
+    public function spam($uids, $src_mbox, $dst_mbox)
     {
         $this->_do_emaillearn($uids, true);
     }
 
-    public function ham($uids, $mbox)
+    public function ham($uids, $src_mbox, $dst_mbox)
     {
         $this->_do_emaillearn($uids, false);
     }
